--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <i class="fab fa-github"></i>
           </a>
           <a href="https://linkedin.com/in/divarvian" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Connect with Diva Arviansyah on LinkedIn">
-            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-tiktok"></i>
           </a>
           <a href="https://instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Diva Arviansyah on Instagram">
             <i class="fab fa-instagram"></i>
