--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           <a href="https://github.com/divarvian" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Visit Diva Arviansyah's GitHub Profile">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://linkedin.com/in/divarvian" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Connect with Diva Arviansyah on LinkedIn">
+          <a href="https://www.tiktok.com/@ansyahrik?_t=8pW41jIohwe&_r=1" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Connect with Diva Arviansyah on LinkedIn">
             <i class="fab fa-tiktok"></i>
           </a>
           <a href="https://instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Diva Arviansyah on Instagram">
