--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <a href="https://instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Diva Arviansyah on Instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://youtube.com/@divarvian" target="_blank" rel="noopener noreferrer" class="icon text-lg text-gray-600" title="Subscribe to Diva Arviansyah's YouTube Channel">
+          <a href="https://www.youtube.com/@ChArdian" target="_blank" rel="noopener noreferrer" class="icon text-lg text-gray-600" title="Subscribe to Diva Arviansyah's YouTube Channel">
             <i class="fab fa-youtube"></i>
           </a>
         </div>
