--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <main class="text-center mt-8">
         <p id="working" class="text-sm text-gray-600 mt-4 mb-2.5">Let's Connect</p>
         <div id="connect">
-          <a href="https://github.com/divarvian" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Visit Diva Arviansyah's GitHub Profile">
+          <a href="https://github.com/ArdianXy" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Visit Diva Arviansyah's GitHub Profile">
             <i class="fab fa-github"></i>
           </a>
           <a href="https://www.tiktok.com/@ansyahrik?_t=8pW41jIohwe&_r=1" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Connect with Diva Arviansyah on LinkedIn">
