--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         "@type": "Person",
         "name": "Muhamad Ardiansyah Rikardi",
         "jobTitle": "Software Engineer & Frontend Developer",
-        "url": "https://linkedin.com/in/divarvian",
-        "sameAs": ["https://github.com/divarvian", "https://linkedin.com/in/divarvian", "https://instagram.com/ardii_ansss", "https://youtube.com/@divarvian"]
+        "url": "https://www.instagram.com/ardii_ansss",
+        "sameAs": ["https://github.com/ArdianXy", "https://www.tiktok.com/@ansyahrik", "https://instagram.com/ardii_ansss", "https://youtube.com/@ChArdian"]
       }
     </script>
   </head>
@@ -84,8 +84,6 @@
         </div>
       </main>
       <footer class="text-center mt-2 grid grid-cols-1 md:grid-cols-2 gap-4">
-        <a href="https://linkedin.com/in/divarvian" target="_blank" rel="noopener noreferrer" class="border border-gray-300 flex h-max w-full items-center justify-center gap-2 rounded-xl bg-white mt-2 px-6 py-3 text-black shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Visit Diva Arviansyah's LinkedIn Profile">
-          <i class="fas fa-bug"></i> Website & Portfolio </a>
         <a href="https://saweria.co/MuhArdian" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-gray-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Support Diva Arviansyah by Buying a Coffee">
           <i class="fas fa-coffee"></i> Buy Me a Coffee </a>
         <div class="md:col-span-2 flex justify-center">
