--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <i class="fas fa-bullhorn"></i> Beasiswa Front End Gratis </a>
         </div>
         <div class="md:col-span-2 flex justify-center">
-          <iframe src="https://open.spotify.com/playlist/2WD3xdpuFVd1zCEapuSpb0?si=LHgrnTcDSSeJS43Jngd1pg&pi=q85Ylz6pTpmLn" frameborder="0" allowtransparency="true" allow="encrypted-media" class="flex items-center justify-center w-full mt-2"></iframe>
+          <iframe src="https://open.spotify.com/embed/playlist/2WD3xdpuFVd1zCEapuSpb0?utm_source=generator" frameborder="0" allowtransparency="true" allow="encrypted-media" class="flex items-center justify-center w-full mt-2"></iframe>
         </div>
       </footer>
     </div>
