--- a/index.html
+++ b/index.html
@@ -69,22 +69,22 @@
       <main class="text-center mt-8">
         <p id="working" class="text-sm text-gray-600 mt-4 mb-2.5">Let's Connect</p>
         <div id="connect">
-          <a href="https://github.com/ArdianXy" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Visit Diva Arviansyah's GitHub Profile">
+          <a href="https://github.com/ArdianXy" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Visit Muhamad Ardiansyah Rikardi's GitHub Profile">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://www.tiktok.com/@ansyahrik?_t=8pW41jIohwe&_r=1" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Connect with Diva Arviansyah on LinkedIn">
+          <a href="https://www.tiktok.com/@ansyahrik?_t=8pW41jIohwe&_r=1" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Muhamad Ardiansyah Rikardi on Tiktok">
             <i class="fab fa-tiktok"></i>
           </a>
-          <a href="https://instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Diva Arviansyah on Instagram">
+          <a href="https://instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="icon mr-4 text-lg text-gray-600" title="Follow Muhamad Ardiansyah Rikardi on Instagram">
             <i class="fab fa-instagram"></i>
           </a>
-          <a href="https://www.youtube.com/@ChArdian" target="_blank" rel="noopener noreferrer" class="icon text-lg text-gray-600" title="Subscribe to Diva Arviansyah's YouTube Channel">
+          <a href="https://www.youtube.com/@ChArdian" target="_blank" rel="noopener noreferrer" class="icon text-lg text-gray-600" title="Subscribe to Muhamad Ardiansyah Rikardi's YouTube Channel">
             <i class="fab fa-youtube"></i>
           </a>
         </div>
       </main>
       <footer class="text-center mt-2 grid grid-cols-1 md:grid-cols-2 gap-4">
-        <a href="https://saweria.co/MuhArdian" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-gray-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Support Diva Arviansyah by Buying a Coffee">
+        <a href="https://saweria.co/MuhArdian" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-gray-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Support Muhamad Ardiansyah Rikardi by Buying a Coffee">
           <i class="fas fa-coffee"></i> Buy Me a Coffee </a>
           <a href="https://www.dicoding.com/programs/dbscodingcamp/registration?referrer_id=2869620" target="_blank" rel="noopener noreferrer" class="flex items-center justify-center rounded-xl bg-green-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300 w-full md:w-max" title="Apply for a Free Front End Scholarship">
             <i class="fas fa-bullhorn"></i> Beasiswa Front End Gratis </a>
