--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <footer class="text-center mt-2 grid grid-cols-1 md:grid-cols-2 gap-4">
         <a href="https://saweria.co/MuhArdian" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-gray-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Support Muhamad Ardiansyah Rikardi by Buying a Coffee">
           <i class="fas fa-coffee"></i> Buy Me a Coffee </a>
-          <a href="https://www.dicoding.com/programs/dbscodingcamp/registration?referrer_id=2869620" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-gray-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Apply for a Free Front End Scholarship">
+          <a href="https://www.dicoding.com/programs/dbscodingcamp/registration?referrer_id=2869620" target="_blank" rel="noopener noreferrer" class="flex h-max w-full items-center justify-center gap-2 rounded-xl bg-blue-800 mt-2 px-6 py-3 text-white shadow-sm transition-all delay-75 duration-300 hover:gap-3 hover:transition-all hover:duration-300" title="Apply for a Free Front End Scholarship">
             <i class="fas fa-bullhorn"></i> Beasiswa Front End Gratis </a>
         <div class="md:col-span-2 flex justify-center">
           <iframe src="https://open.spotify.com/embed/playlist/2WD3xdpuFVd1zCEapuSpb0?utm_source=generator" frameborder="0" allowtransparency="true" allow="encrypted-media" class="flex items-center justify-center w-full mt-2"></iframe>
