--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </svg>
         </h1>
         <p id="bio" class="text-sm mt-2">I am just a person who has a desire to become a software engineer, I am learning PHP, Java, HTML, and C++.</p>
-        <p id="working" class="text-sm text-gray-600 mt-4">Currently working on <a href="https://www.instagram.com/ardii_ansss" target="_blank" rel="noopener noreferrer" class="font-bold">Nothing</a>
+        <p id="working" class="text-sm text-gray-600 mt-4">Currently working at <a href="https://www.instagram.com/daya.recruitment?igsh=MWRwMjR1MXoxc2w5cw==" target="_blank" rel="noopener noreferrer" class="font-bold">daYA Group</a>
         </p>
       </header>
       <main class="text-center mt-8">
